Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36838

Oracle outer join syntax (+): server crash on derived tables

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 12.1(EOL)
    • 12.0.1
    • OTHER
    • None
    • Q2/2025 Development

    Description

      Testcase:

      set SQL_MODE= oracle;
      select a.a
      from (select 1 as a) a,
           (select 2 as b) b
           where a.a=b.b(+);
      

      Stacktrace:

      Thread pointer: 0x7f40a0000dc8
      stack_bottom = 0x7f40d409d000 thread_stack 0x49000
      mysys/stacktrace.c:215(my_print_stacktrace)[0x64f688db036e]
      sql/signal_handler.cc:230(handle_fatal_signal)[0x64f68837ea6f]
      libc_sigaction.c:0(__restore_rt)[0x7f40db642520]
      nptl/pthread_kill.c:44(__pthread_kill_implementation)[0x7f40db6969fc]
      posix/raise.c:27(__GI_raise)[0x7f40db642476]
      stdlib/abort.c:81(__GI_abort)[0x7f40db6287f3]
      intl/loadmsgcat.c:1177(_nl_load_domain)[0x7f40db62871b]
      /lib/x86_64-linux-gnu/libc.so.6(+0x39e96)[0x7f40db639e96]
      sql/item.cc:10250(Item_field::ora_join_processor(void*))[0x64f6883c7eab]
      /home/elena/work/MariaDB/main/bld/sql/mariadbd(+0xa63a8e)[0x64f687d73a8e]
      sql/item.h:2209(Item::walk(bool (Item::*)(void*), void*, unsigned char))[0x64f687db3ec7]
      sql/item.h:2903(Item_args::walk_args(bool (Item::*)(void*), void*, unsigned char))[0x64f687db4678]
      sql/item.h:5886(Item_func_or_sum::walk(bool (Item::*)(void*), void*, unsigned char))[0x64f687f23a12]
      sql/sql_oracle_outer_join.cc:308(ora_join_process_expression(THD*, Item*, table_pos*, unsigned int))[0x64f687f24f4a]
      sql/sql_oracle_outer_join.cc:764(setup_oracle_join(THD*, Item**, TABLE_LIST*, SQL_I_List<TABLE_LIST>&, List<TABLE_LIST>*))[0x64f687e6d209]
      sql/sql_base.cc:8969(setup_conds(THD*, TABLE_LIST*, List<TABLE_LIST>&, Item**))[0x64f687f9be4b]
      sql/sql_select.cc:957(setup_without_group(THD*, Bounds_checked_array<Item*>, TABLE_LIST*, List<TABLE_LIST>&, List<Item>&, List<Item>&, Item**, st_order*, st_order*, List<Window_spec>&, List<Item_window_func>&, bool*))[0x64f687f9f1e5]
      sql/sql_select.cc:1590(JOIN::prepare(TABLE_LIST*, Item*, unsigned int, st_order*, bool, st_order*, Item*, st_order*, st_select_lex*, st_select_lex_unit*))[0x64f687fad324]
      sql/sql_select.cc:5366(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x64f687f9b368]
      sql/sql_select.cc:634(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x64f687f3bb74]
      sql/sql_parse.cc:6166(execute_sqlcom_select(THD*, TABLE_LIST*))[0x64f687f33770]
      sql/sql_parse.cc:3954(mysql_execute_command(THD*, bool))[0x64f687f40c11]
      sql/sql_parse.cc:7882(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x64f687f2cfda]
      sql/sql_parse.cc:1879(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x64f687f2b945]
      sql/sql_parse.cc:1416(do_command(THD*, bool))[0x64f68813ad3f]
      sql/sql_connect.cc:1414(do_handle_one_connection(CONNECT*, bool))[0x64f68813aab4]
      sql/sql_connect.cc:1328(handle_one_connection)[0x64f68873a697]
      nptl/pthread_create.c:442(start_thread)[0x7f40db694ac3]
      x86_64/clone3.S:83(__clone3)[0x7f40db726850]
      

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              lstartseva Lena Startseva
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.