MDEV-36838 Oracle outer join syntax (+): server crash on derived tables

Find TABLE_LIST via Field.